--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
       <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
       <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
   </div>
 
   <!-- Header -->
-  <header class="w3-container w3-center" style="padding:62px 16px">
+  <header class="w3-container w3-center w3-padding-62-16">
     <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <div class="w3-display-middle">
       <h1 class="headertext w3-margin w3-jumbo">Cloud 9 Consulting</h1>
@@ -40,61 +40,62 @@
   </header>
 
   <!-- First Grid -->
-  <div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-twothird">
+      <div>
         <h1>Welcome</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
+        <h5>Sub heading</h5>
 
-        <p class="w3-text-grey">Welcome to our page.</p>
+        <p>Welcome to our page.</p>
       </div>
 
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red"></i>
+      <div class="w3-center">
+        <i></i>
       </div>
     </div>
   </div>
 
   <!-- Second Grid -->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-light-grey w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
+      <div class="w3-center">
+        <i class="w3-margin-right"></i>
       </div>
 
-      <div class="w3-twothird">
+      <div>
         <h1>Page 2</h1>
         <h5 class="w3-padding-32">Sub heading</h5>
 
-        <p class="w3-text-grey">Example paragraph</p>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- Third Grid -->
-  <div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-container">
       <div class="w3-content">
-        <div class="w3-third w3-center">
-          <i class="w3-padding-64 w3-text-red w3-margin-right"></i>
+        <div class="w3-center">
+          <i class="w3-margin-right"></i>
         </div>
     
-        <div class="w3-twothird">
+        <div>
           <h1>Page 3</h1>
-          <h5 class="w3-padding-32">Sub heading</h5>
+          <h5>Sub heading</h5>
     
-          <p class="w3-text-grey">Example paragraph</p>
+          <p>Example paragraph</p>
+
         </div>
       </div>
     </div>
 
 
-  <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+  <div class="w3-container w3-black w3-center">
       <h1 class="w3-margin w3-xlarge">Footer</h1>
   </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-    <div class="w3-xlarge w3-padding-32">
+  <footer class="w3-container w3-center">  
+    <div class="w3-xlarge">
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
