--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
       <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
       <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
       <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
@@ -32,12 +32,12 @@
     </div>
   </div>
 
-  <header class="w3-container w3-center" style="padding:62px 16px">
+  <header class="w3-container w3-center w3-padding-62-16">
         <h1 class="w3-margin w3-jumbo">Who We Are</h1>
         <p class="w3-xlarge">Sub-heading</p>
   </header>
 
-  <div class='w3-content w3-twothird w3-center'>
+  <div class='w3-content w3-center'>
     <div class='flex'>
       <div class='thirdWidth'>Kate</div>
       <div class='thirdWidth'>Mark</div>
@@ -51,7 +51,7 @@
   <!-- Footer -->
   <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
     <div class="w3-xlarge w3-padding-32">
-  </div>
+    </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
 
