--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
       <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
       <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
       <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
@@ -32,12 +32,12 @@
     </div>
   </div>
 
-  <header class="w3-container w3-center" style="padding:62px 16px">
+  <header class="w3-container w3-center w3-padding-62-16">
       <h1 class="w3-margin w3-jumbo">What We Do</h1>
       <p class="w3-xlarge">Sub-heading</p>
   </header>
 
-  <div class='w3-content w3-twothird w3-center'>
+  <div class='w3-content w3-center'>
     <div class='flex'>
       <div class='quarterWidth'>Web Design</div>
       <div class='quarterWidth'>Geovisualization</div>
@@ -54,132 +54,132 @@
   </div>
 
   <!-- GEOM 101-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
       <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+        <i>test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div>
         <h1>Web Design</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- GEOM 102-->
-  <div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      <div class="w3-center">
+        <i>test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div>
         <h1>Geovisualization</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- GEOM 103-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      <div class="w3-center">
+        <i>test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div>
         <h1>Spatial Analysis</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- GEOM 104-->
-  <div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      <div class="w3-center">
+        <i>test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div class>
         <h1>Geodesy</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- GEOM 65-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      <div class="w3-center">
+        <i>test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div>
         <h1>Database Modeling</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- GEOM 66-->
-  <div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      <div class="w3-center">
+        <i class="w3-margin-right">test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div>
         <h1>Remote Sensing</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- GEOM 67-->
-  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-padding-64 w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      <div class="w3-center">
+        <i>test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div>
         <h1>Programming and Automation</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
   <!-- SURV 21-->
-  <div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-container">
     <div class="w3-content">
-      <div class="w3-third w3-center">
-        <i class="w3-padding-64 w3-text-red w3-margin-right">test</i>
+      <div class="w3-center">
+        <i>test</i>
       </div>
   
-      <div class="w3-twothird">
+      <div>
         <h1>Surveying</h1>
-        <h5 class="w3-padding-32">Sub heading</h5>
-        <p class="w3-text-grey">Example paragraph</p>
+        <h5>Sub heading</h5>
+        <p>Example paragraph</p>
       </div>
     </div>
   </div>
 
-  <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+  <div class="w3-container w3-black w3-center">
     <h1 class="w3-margin w3-xlarge">Footer</h1>
   </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-    <div class="w3-xlarge w3-padding-32">
+  <footer class="w3-container w3-center">  
+    <div class="w3-xlarge">
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
