--- a/people.html
+++ b/people.html
@@ -38,12 +38,26 @@
         <p class="w3-xlarge">Sub-heading</p>
   </header>
 
+<!--Mark-->
   <div class='w3-content w3-center'>
     <div class='flex'>
-      <div class='thirdWidth'>Kate</div>
-      <div class='thirdWidth'>Mark</div>
-      <div class='thirdWidth'>Kazuto</div>
+      <div class='thirdWidth'>
+        <h4>Kate</h4>
+        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+        <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      </div>
+      <div class='thirdWidth'>
+        <h4>Mark</h4>
+        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+        <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      </div>
+      <div class='thirdWidth'>
+        <h4>Kazuto</h4>
+        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+        <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      </div>
     </div>
+  <!--End Mark-->
 
   <div class="w3-container w3-black w3-center">
     <h1 class="w3-margin w3-xlarge">Footer</h1>
