--- a/people.html
+++ b/people.html
@@ -37,28 +37,50 @@
         <h1 class="w3-margin w3-jumbo">Who We Are</h1>
         <p class="w3-xlarge">Sub-heading</p>
   </header>
-<!--November 24, 2020-->
-<!--Mark-->
-  <div class='w3-content w3-center'>
-    <div class='flex'>
-      <div class='thirdWidth'>
+
+<!--Mark edit Dec 1 2020-->
+<!-- bios on larger screens-->
+  <div class='w3-content w3-center w3-hide-small'>
+    <div class='flex-people'>
+      <div class= "bioblock">
+        <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
         <h4>Kate</h4>
-        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
         <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
       </div>
-      <div class='thirdWidth'>
+      <div class= "bioblock">
+        <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
         <h4>Mark</h4>
-        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
         <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
       </div>
-      <div class='thirdWidth'>
+      <div class= "bioblock">
+        <img class="w3-image bioimage" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
         <h4>Kazuto</h4>
-        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
         <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
       </div>
     </div>
-  <!--End Mark-->
+  </div> 
 
+<!-- bios on small screens-->
+  <div class='w3-content-mobile w3-center w3-hide-large w3-hide-medium'>
+    <div class='flex-people'>
+      <div class= "bioblock">
+        <img class="w3-image " src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+        <h4>Kate</h4>
+        <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      </div>
+      <div class= "bioblock">
+        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+        <h4>Mark</h4>
+        <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      </div>
+      <div class= "bioblock">
+        <img class="w3-image" src="images/TestImage.png"  alt="Test Image" width="200" height="300">
+        <h4>Kazuto</h4>
+        <p class="biotext">Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here Insert Bio Text Here</p>
+      </div>
+    </div>
+<!-- End Mark edit
+-->
   <div class="w3-container w3-black w3-center">
     <h1 class="w3-margin w3-xlarge">Footer</h1>
   </div>
