--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- edits made by Kazuto Nov 21, 22, 23 -->
 <!-- edits made by Mark Nov 24, cleaning up unused classes -->
 
+<!-- Owner: Kate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +26,7 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-hide-small w3-large">
       <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
       <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
@@ -115,3 +116,5 @@
 
 </body>
 </html>
+
+<!-- end of Kate ownership-->
