--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<!-- Owner: Kate -->
   <!-- Navbar -->
   <div class="w3-top">
     <div class="w3-bar w3-card w3-left-align w3-large w3-white">
@@ -31,6 +31,7 @@
       <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
   </div>
+<!--End of Owner: Kate -->
 
   <!-- Header -->
   <header class="w3-container w3-center w3-padding-62-16">
