--- a/projects.html
+++ b/projects.html
@@ -11,12 +11,11 @@
 </head>
 
 <body>
+<!-- Owner: Kate -->
   <!-- Navbar -->
   <div class="w3-top">
     <div class="w3-bar w3-card w3-left-align w3-large w3-white">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white
-       w3-large w3-blue" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu">
-       <i class="fa fa-bars"></i></a>
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-blue w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
       <a href="people.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">People</a>
       <a href="projects.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
@@ -24,14 +23,12 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 1</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 2</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 3</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 4</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Page 5</a>
+    <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-hide-small w3-large">
+      <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
+      <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
   </div>
+<!--End of Owner: Kate -->
 
   <header class="w3-container w3-center w3-padding-62-16">
       <h1 class="w3-margin w3-jumbo">What We Do</h1>
