--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,10 @@
   <title>Projects</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">  
+  <link rel="stylesheet" href="style.css">
+  <!-- Owner: Kate -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <!-- End of Owner: Kate-->  
 </head>
 
 <body>
