--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-white w3-hide w3-hide-large w3-hide-medium w3-hide-small w3-large">
-      <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
-      <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
+      <a href="people.html" class="w3-show w3-bar-item w3-button w3-padding-large">People</a>
+      <a href="projects.html" class="w3-show w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
   </div>
 <!--End of Owner: Kate -->
