--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
 
   <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-      <a href="people.html" class="w3-bar-item w3-button w3-padding-large">People</a>
-      <a href="projects.html" class="w3-bar-item w3-button w3-padding-large">Projects</a>
+    <div id="SmallNavBar" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+      <a href="people.html" class="w3-show w3-bar-item w3-button w3-padding-large">People</a>
+      <a href="projects.html" class="w3-show w3-bar-item w3-button w3-padding-large">Projects</a>
     </div>
   </div>
 <!--End of Owner: Kate -->
@@ -113,7 +113,7 @@
   // Used to toggle the menu on small screens when clicking on the menu button
   function myFunction() {
 
-    var x = document.getElementById("navDemo");
+    var x = document.getElementById("SmallNavBar");
     if (x.className.indexOf("w3-show") == -1) {
       x.className += " w3-show";
     } else { 
