--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <img class="w3-image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <div class="w3-display-middle">
       <!-- Owner: Kate -->
-      <h1 class="header-small header-medium header-large headertext w3-margin w3-jumbo">Cloud 9 Consulting</h1>
+      <h1 class="headertext w3-margin w3-jumbo">Cloud 9 Consulting</h1>
       <p class="center-align w3-xlarge">GIS Solutions</p>
     </div>
   </header>
